fixed cropping to get correct size to crop from original; changed thumbnail size to 230

--- a/app/assets/stylesheets/visualization_grid.css.less
+++ b/app/assets/stylesheets/visualization_grid.css.less
@@ -1,6 +1,6 @@
 .grid_visualization_item{
   float: left;
-  width: 180px;
+  width: 230px;
   padding: 10px;
   margin: 0 20px 20px 0;
   .visual{
