--- a/app/assets/stylesheets/visualization_list.css.less
+++ b/app/assets/stylesheets/visualization_list.css.less
@@ -3,7 +3,7 @@
   margin-bottom: 20px;
   .visual{
     float: left;
-	  width: 180px;
+	  width: 230px;
 		margin-right: 10px;
   }
   .content{
